Updated the code

--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
 <body>
 <!-- partial:index.partial.html -->
 <section id='puzzle-grid'></section>
-<section id='reaction'>😐</section>
+<section id='reaction'>😐
+  <!-- Add these buttons to your HTML within the <section id='reaction'> or an appropriate location -->
+  <button id="reset-button">Reset Game</button>
+  <button id="simple-game-button">Simple Game</button>
+  <span id="timer">Time: 0 seconds</span>
+</section>
 <!-- partial -->
   <script  src="./script.js"></script>
-
 </body>
 </html>
